@@ -19,7 +19,7 @@ public class CrystallarieumEmiRecipeGated extends GatedSpectrumEmiRecipe<Crystal
 		super(SpectrumEmiRecipeCategories.CRYSTALLARIEUM, recipe, 124, 100);
 		inputs = List.of(
 				EmiIngredient.of(recipe.getIngredientStack()),
-				EmiStack.of(recipe.getGrowthStages().get(0).getBlock())
+				EmiStack.of(recipe.getGrowthStages().getFirst().getBlock())
 		);
 		outputs = Stream.concat(
 				Stream.concat(
@@ -32,7 +32,7 @@ public class CrystallarieumEmiRecipeGated extends GatedSpectrumEmiRecipe<Crystal
 	
 	@Override
 	public void addUnlockedWidgets(WidgetHolder widgets) {
-		widgets.addSlot(inputs.get(0), 0, 8);
+		widgets.addSlot(inputs.getFirst(), 0, 8);
 		
 		widgets.addSlot(EmiStack.of(SpectrumBlocks.CRYSTALLARIEUM.asStackWithColor(recipe.getInkColor())), 20, 18).drawBack(false);
 		
